At least it does something now

--- a/eliottest.html
+++ b/eliottest.html
@@ -12,7 +12,7 @@
 	<body>
 
 		<canvas id="canvas"></canvas>
-		<script src="//js.leapmotion.com/0.2.0/leap.min.js"></script>
+		<script src="node_modules/leapjs/leap.js"></script>
 
 		<button onclick="controller.connect">Spawn Unicorn (Connect Controller)</button>
 
