Adds Features to the leap interface

--- a/eliottest.html
+++ b/eliottest.html
@@ -13,7 +13,7 @@
 
 		<canvas id="canvas"></canvas>
 		<button onclick="controller.connect()">Count Fingers ( Connect Controller )</button>
-		<script src="node_modules/leapjs/leap.js"></script>
+		<script src="leap.js"></script>
 
 		<script>
 
