--- a/test.html
+++ b/test.html
@@ -1,5 +1,21 @@
 <html>
-  <body>
-    Hello LEap!
-  </body>
+
+<head>
+  <title> EduLeap </title>
+  <script src="js/jquery.js"></script>
+  <script src="js/leap.js"></script>
+  <script src="js/leap_initial.js"></script>
+  <link type="text/css" href="css/style.css" rel="stylesheet"/>
+</head>
+
+<body>
+  <p>The Educational Leap!</p>
+  
+  <canvas id= "surface"></canvas>
+  
+  <div id = "test"> 
+    <p> This is a finite loop </p>
+  </div>
+</body>
+
 </html>
