Click to Move functionality completed

--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
 <body>
   <p>The Educational Leap!</p>
   
-  <canvas id= "surface"></canvas>
+  <canvas id= "canvas"></canvas>
   
   <div id = "test"> 
     <p> This is a finite loop </p>
