Finally completed click to drag!!

--- a/eliottest.html
+++ b/eliottest.html
@@ -13,7 +13,7 @@
 
 		<canvas id="canvas"></canvas>
 		<button onclick="controller.connect()">Count Fingers ( Connect Controller )</button>
-		<script src="node_modules/leapjs/leap.js"></script>
+		<script src="leap.js"></script>
 
 		<script>
 
@@ -42,6 +42,7 @@
 
 					//iterate through fingers
 					for (var j = 0; j < hand.fingers.length; j++) {
+                      console.log(j);
 						var finger = hand.fingers[j];
 						var fingerPos = leapToScene(frame, finger.tipPosition);
 
