Fixed major issues in dropping

--- a/dragtest.html
+++ b/dragtest.html
@@ -10,7 +10,15 @@
 
 <body>
   <div id="test">
-    <p>This is a finite loop</p>
+    <p>This is a test</p>
+  </div>
+  
+    <div id="loop">
+    <p>This is a loop</p>
+  </div>
+  
+    <div id="circuit">
+    <p>This is a circuit</p>
   </div>
   
   <div id = "pointer"></div>
