Implements multiple object drag and drop

--- a/dragtest.html
+++ b/dragtest.html
@@ -9,19 +9,20 @@
 </head>
 
 <body>
-  <div id="test">
+  <div id="test" class="component">
     <p>This is a test</p>
   </div>
   
-    <div id="loop">
+    <div id="loop" class="component">
     <p>This is a loop</p>
   </div>
   
-    <div id="circuit">
+    <div id="circuit" class="component">
     <p>This is a circuit</p>
   </div>
   
   <div id = "pointer"></div>
+  
 </body>
 
 </html>
