Includes new Joint JS library

--- a/dragtest.html
+++ b/dragtest.html
@@ -4,8 +4,10 @@
 
   <script src="js/jquery.js"></script>
   <script src="leap.js"></script>
+  <script src="js/joint.js"></script>
   <script src="js/leap_drag.js"></script>
   <link type="text/css" href="css/style.css" rel="stylesheet" />
+  <link type="text/css" href="css/joint.css" rel="stylesheet" />
 </head>
 
 <body>
