--- a/visualJS/visualJS_HTML.html
+++ b/visualJS/visualJS_HTML.html
@@ -3,10 +3,10 @@
         <title>
             Visual JS!
         </title>
-        <link rel="stylesheet" type="text/css" href="css/visualJS_CSS.css">
-        <script type = "text/javascript" src="js/jquery.js"></script>
-        <script type="text/javascript" src="js/visualJS_Voice.js"></script>
-        <script type = "text/javascript" src="js/visualJS_JSMain.js"></script>
+        <link rel="stylesheet" type="text/css" href="visualJS_CSS.css">
+        <script type = "text/javascript" src="jquery.js"></script>
+        <script type="text/javascript" src="visualJS_Voice.js"></script>
+        <script type = "text/javascript" src="visualJS_JSMain.js"></script>
     </head>
     <body>
         
