Adds a scroll for better visual performance

--- a/dragtest.html
+++ b/dragtest.html
@@ -22,7 +22,7 @@
   </div>
   
   <div id = "pointer"></div>
-  
+  <div id = "direction"></div>
   <button id = "generateComponent">Generate Component</button>
 </body>
 
