--- a/visualJS/visualJS_HTML.html
+++ b/visualJS/visualJS_HTML.html
@@ -3,9 +3,8 @@
         <title>
             Visual JS!
         </title>
-        <link rel="stylesheet" type="text/css" href="visualJS_CSS.css">
+        <link rel="stylesheet" type="text/css" href="css/visualJS_CSS.css">
         <script type = "text/javascript" src="jquery.js"></script>
-        <script type="text/javascript" src="visualJS_Voice.js"></script>
         <script type = "text/javascript" src="visualJS_JSMain.js"></script>
     </head>
     <body>
@@ -14,9 +13,11 @@
             var x = new Block("div", "forLoop");
             var y = new Block("div", "if");
             var z = new Block("div", "else");
+            var a = new Block("div", "whileLoop");
             x.create();
             y.create();
             z.create();
+            a.create();
         </script>
     </body>
 </html>
