--- a/dragtest.html
+++ b/dragtest.html
@@ -4,6 +4,7 @@
 
   <script src="js/jquery.js"></script>
   <script src="leap.js"></script>
+  <script src="js/jQueryRotate.js"></script>
   <script src="js/snaptogrid.js"></script>
   <script src="js/leap_drag.js"></script>
   <link type="text/css" href="css/style.css" rel="stylesheet" />
