Initial lesson base

--- a/dragtest.html
+++ b/dragtest.html
@@ -18,13 +18,11 @@
     <div id="loop" class="component">
   </div>
   
-    <div id="circuit" class="component">
-    <p>This is a circuit</p>
-  </div>
-  
+  <div id = "invisible"></div>
   <div id = "pointer"></div>
   <div id = "direction"></div>
-  <button id = "generateComponent">Generate Component</button>
+  <button id = "generateComponent">Generate Resistance</button>
+  <div id = "answer"> Answer </div>
 </body>
 
 </html>
