Connecting circuit blocks attempt 1

--- a/dragtest.html
+++ b/dragtest.html
@@ -24,6 +24,11 @@
   <div id = "direction"></div>
   <button id = "generateComponent">Generate Resistance</button>
   <div id = "answer"> Answer </div>
+  <div id = "line1"></div>
+  <div id = "line2"></div>
+  <div id = "line3"></div>
+  <div id = "line4"></div>
+  <div id = "line5"></div>
 </body>
 
 </html>
