Visual and readability improvements

--- a/dragtest.html
+++ b/dragtest.html
@@ -17,13 +17,18 @@
   </div>
   
     <div id="loop" class="component">
+      <center>10 V</center>
   </div>
   
   <div id = "invisible"></div>
   <div id = "pointer"></div>
   <div id = "direction"></div>
   <button id = "generateComponent">Generate Resistance</button>
-  <div id = "answer"> Answer </div>
+
+  <div id = "answer">
+    <p>Pick a resistor value that will give us a 1 Ampere current flowing through the circuit. Keep in mind Ohm's Law: V = IR. Drag the resistor into the grey box.</p> 
+  </div>
+
   <div id = "line1"></div>
   <div id = "line2"></div>
   <div id = "line3"></div>
