Includes 1st lesson in circuit Mania

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <title>Leap Academia</title>
   <link href="css/bootsrap/bootstrap.css" rel="stylesheet" />
+  <link href="css/common.css" rel="stylesheet" />
   <link href="css/home_styles.css" rel="stylesheet" />
+
 
 </head>
 
 <body>
-  <div>
-    <h1 id="main">LEAP ACADEMIA</h1>
-    <button id="Start">Get Started</button>
+  <div class="header">
+    <h1 class="main">LEAP ACADEMIA</h1>
   </div>
+  <button id="Start">Get Started</button>
 </body>
 
 </html>
