Updating the 1st lesson for circuits

--- a/circuit_parts.html
+++ b/circuit_parts.html
@@ -34,6 +34,12 @@
   <div id= "voltageAnswer" class="component answer"></div>
   <div id ="currentAnswer" class="component answer"></div>
   <div id ="resistanceAnswer" class="component answer"></div>
+  
+  <div id="description" class="component">
+    <p><h3>Match the diagrams to the correct corresponding pictures</h3></p>
+  </div>
+  
+  <button id="next" class="buttons">Next Chapter</button>
 </body>
 
 </html>
