--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <link href="css/bootsrap/bootstrap.css" rel="stylesheet" />
   <link href="css/common.css" rel="stylesheet" />
   <link href="css/home_styles.css" rel="stylesheet" />
-
-
+  <script src="navigation.js"></script>
 </head>
 
 <body>
