Last ditch effort for visualJS

--- a/visualJS/visualJS_HTML.html
+++ b/visualJS/visualJS_HTML.html
@@ -14,10 +14,12 @@
             var y = new Block("div", "if");
             var z = new Block("div", "else");
             var a = new Block("div", "whileLoop");
-            x.create();
-            y.create();
-            z.create();
-            a.create();
+            var b = new Block("div", "function");
+//            x.create();
+//            y.create();
+//            z.create();
+//            a.create();
+//            b.create();
         </script>
     </body>
 </html>
