Adds Navigation between the pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link href="css/bootsrap/bootstrap.css" rel="stylesheet" />
   <link href="css/common.css" rel="stylesheet" />
   <link href="css/home_styles.css" rel="stylesheet" />
+  <script src="js/jquery.js"></script>
+  <script src="js/leap.js"></script>
   <script src="navigation.js"></script>
 </head>
 
