Implements drag functionality for ohms law page

--- a/circuit_parts.html
+++ b/circuit_parts.html
@@ -40,8 +40,8 @@
     <h3>Current Source</h3>
   </div>
 
-  <div id="voltageAnswer" class="component answer"></div>
-  <div id="currentAnswer" class="component answer"></div>
+  <div id="voltageAnswer" class="component"></div>
+  <div id="currentAnswer" class="component"></div>
   <div id="resistanceAnswer" class="component answer"></div>
 
   <div id="description" class="component">
@@ -52,6 +52,9 @@
 
   <button id="next" class="buttons">Next Chapter</button>
 
+
+  <div id="pointer"></div>
+  <div id="direction"></div>
 </body>
 
 </html>
