--- a/ohmslaw.html
+++ b/ohmslaw.html
@@ -34,8 +34,10 @@
     </p>
   </div>
 
-  <div id="description3" class="component">
+  <div id="description3">
   </div>
   <button id="exercises">Solve Exercises</button>
 
+  <div id="pointer"></div>
+  <div id="direction"></div>
 </body>
