Revert "Implements drag functionality for ohms law page"
This reverts commit 5a087cc79a5e48aa9af5dcd6c7ebf0d69cc58d0c.

--- a/ohmslaw.html
+++ b/ohmslaw.html
@@ -34,10 +34,8 @@
     </p>
   </div>
 
-  <div id="description3">
+  <div id="description3" class="component">
   </div>
   <button id="exercises">Solve Exercises</button>
 
-  <div id="pointer"></div>
-  <div id="direction"></div>
 </body>
